syntax = "proto3";
package provenance.ledger.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "provenance/ledger/v1/ledger.proto";

option go_package = "github.com/provenance-io/provenance/x/ledger/types";

// EventLedgerCreated is emitted when a new ledger is created for an NFT.
message EventLedgerCreated {
  // The address of the NFT
  string nft_address = 1;
  // The denomination used for the ledger
  string denom = 2;
}

// EventLedgerEntryAdded is emitted when a new entry is added to a ledger.
message EventLedgerEntryAdded {
  // The address of the NFT
  string nft_address = 1;
  // The unique identifier of the entry
  string entry_uuid = 2;
  // The type of the entry
  LedgerEntryType entry_type = 3;
  // The date the entry was posted
  google.protobuf.Timestamp posted_date = 4 [(gogoproto.stdtime) = true];
  // The date the entry takes effect
  google.protobuf.Timestamp effective_date = 5 [(gogoproto.stdtime) = true];
  // The total amount of the entry
  string amount = 6;
}

// EventBalanceUpdated is emitted when balances are updated due to a ledger entry.
message EventBalanceUpdated {
  // The address of the NFT
  string nft_address = 1;
  // The new principal balance
  string principal_balance = 2;
  // The new interest balance
  string interest_balance = 3;
  // The new other balance
  string other_balance = 4;
}

// EventLedgerConfigUpdated is emitted when ledger configuration is modified.
message EventLedgerConfigUpdated {
  // The address of the NFT
  string nft_address = 1;
  // The new denomination
  string denom = 2;
  // The previous denomination (if changed)
  string previous_denom = 3;
} 